--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Chatee</string>
+    <string name="login">Log In</string>
+    <string name="register">Register</string>
 </resources>
