--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Chatee</string>
     <string name="login">Log In</string>
     <string name="register">Register</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
